k8s/jaeger-virtualService.yaml
# virtualservice определяем правила маршрутизации
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jaeger
  namespace: observability
spec:
  hosts:
    - "jaeger.k3s.dev.com"
  gateways:
    - "observability/gateway"
  http:
    - route:
        - destination:
            host: jaeger.observability.svc.cluster.local
            port:
              number: 16686
